[package]
name = "the_cow"
description = "💬 a cli for the singular cow"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = { version = "1.0.152", features = ["derive"] }
